@startuml

title __CART's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace elementos_sin_clasificar.cart {
      class com.pis.buy2gether.elementos_sin_clasificar.cart.CartFragment {
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace elementos_sin_clasificar.cart {
      class com.pis.buy2gether.elementos_sin_clasificar.cart.CartViewModel {
          - mText : MutableLiveData<String>
          + CartViewModel()
          + getText()
      }
    }
  }
  

  com.pis.buy2gether.elementos_sin_clasificar.cart.CartFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.elementos_sin_clasificar.cart.CartFragment o-- com.pis.buy2gether.databinding.FragmentCartBinding : binding
  com.pis.buy2gether.elementos_sin_clasificar.cart.CartFragment o-- com.pis.buy2gether.elementos_sin_clasificar.cart.CartViewModel : cartViewModel
  com.pis.buy2gether.elementos_sin_clasificar.cart.CartViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
